2008-07-02  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-position.h (seek_position): Moved to protected scope. The signature
	and the call semantics were also changed. All classed inhering from 
	ECA_AUDIO_POSITION need to be updated.
	* eca-audio-position.h (supports_seeking, supports_seeking_sample_accurate): Added
	as pure virtual methods.
	* audioio.h (supports_seeking_sample_accurate): Added as implemented 
	inherited method.

2008-03-11  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* dynamic-parameters.h (variable_params): Added.

2008-03-10  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-time.h: Modified constructor variants. Added sample_rate as
	a parameter to most setter functions.
	* audioio-aac.h, audioio-flac.h, audioio-mikmod.h, audioio-ogg.h, audioio-timidity.h: 
	Inheritance of AUDIO_IO_FORKED_STREAM changed from protected to public.
	* audioio-forked-stream.h (start_io,stop_io): Added new functions. Most
	of the other public functions moved to protected status.
	* audioio-forked-stream.h: Class now inherits AUDIO_IO_BARRIER.
	* audioio-barrier.h: File added.

2008-03-09  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-time.h: Added overloaded constructor that takes a std::string
	as parameter.
	* eca-audio-time.h (set_time_string): Added.
	* library interface version to 19:0:0.
	* audioio-tone.h: File added.
	* audioio-seqbase.h: File added.
	* audioio-acseq.h: File added.
	* audioio-ewf.h: Rebased implementation on the new AUDIO_SEQUENCER_BASE
	interface.
		
2007-08-14  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 18 frozen (2.4.6 release)
	
2007-08-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-resources.h: Added static member 'rc_override_file' of
	type std::string.

2007-08-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* samplebuffer.h: Added make_empty() and is_empty() public methods.
	* eca-chain.h: Added is_finished() and toggle_finished() methods. 
	* library interface version to 18:0:0.
	